--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -13,20 +13,24 @@
     items:{
         html:'<a href="https://help.rallydev.com/apps/2.0rc1/doc/#!/api/Rally.data.WsapiDataStore">Hint!<a>'
     },
-    fireFromTheStore:function(store,records){
-        var blockedRecords = _.filter(records,function(record){
-            var blocked = record.get('Blocked')
-            console.log(blocked,record);
-            return blocked;
-        }); 
-        Ext.Msg.alert('Status', 'Store Loaded with '+records.length+' records and '+blockedRecords.length + ' blocked records.');
-    },
 
     launch: function() {
-
+        this.add({
+            xtype:"rallycardboard",
+            cardConfig:{
+                xtype:"customcard"
+            }
+        });
     }
 });
 
+                
+Ext.define('App.MyCard', {
+    //This is the class we are extending. In this case we are making a custom card extending Rally's default card
+    extend: 'Rally.ui.cardboard.Card',
+    //the alias is used to create a reference for component's xtypes
+    alias: 'widget.customcard'
+});
 
             Rally.launchApp('CustomApp', {
                 name:"Son of Excercise1",
