--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -1,39 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Son of Excercise1</title>
+    <title>Exercise 2</title>
 
     <script type="text/javascript" src="/apps/2.0rc1/sdk.js"></script>
 
     <script type="text/javascript">
         Rally.onReady(function () {
                 Ext.define('CustomApp', {
-    extend: 'Rally.app.App',
-    componentCls: 'app',
+    extend:'Rally.app.App',
+    componentCls:'app',
     items:{
-        html:'<a href="https://help.rallydev.com/apps/2.0rc1/doc/#!/api/Rally.data.WsapiDataStore">Hint!<a>'
+        html:''
     },
 
-    launch: function() {
+    launch:function () {
         this.add({
             xtype:"rallycardboard",
             cardConfig:{
                 xtype:"customcard"
-            }
+            },
+            columns:[
+                {
+                    xtype:'rallycardboardcolumn',
+                    value:'Defined'
+                },
+                {
+                    xtype:'rallycardboardcolumn',
+                    value:'Completed'
+                }
+            ]
         });
     }
 });
 
-                
-Ext.define('App.MyCard', {
+                Ext.define('App.MyCard', {
     //This is the class we are extending. In this case we are making a custom card extending Rally's default card
     extend: 'Rally.ui.cardboard.Card',
     //the alias is used to create a reference for component's xtypes
-    alias: 'widget.customcard'
+    alias: 'widget.customcard',
+
+    //This record will have the data for the Rally Artifact when the card is created.
+    record:null,
+
+    inheritableStatics: {
+        //This list of fields you expect hydrated in the records. This information is passed along to the Rally server and assures that
+        getFetchFields: function() {
+            return ['Owner', 'FormattedID', 'Blocked', 'Ready', 'Name', 'Tags', 'DisplayColor',"Parent"];
+        }
+    },
+
+    initComponent:function(){
+        if(this.record.get("Parent"))
+            this.addClass("parented");
+        else
+            this.addClass("not-parented");
+        this.callParent(arguments);
+    }
 });
 
             Rally.launchApp('CustomApp', {
-                name:"Son of Excercise1",
+                name:"Exercise 2",
 	            parentRepos:"ferentchak/RallyCertifiedDeveloperExercise1"
             });
 
@@ -47,6 +74,13 @@ Ext.define('App.MyCard', {
      border-style:none;
 }
 
+
+.rui-card .artifact-color{
+    background-color: #35b2e4 !important;
+}
+.rui-card.parented .artifact-color{
+    background-color: #D08AAF !important;
+}
     </style>
 </head>
 <body></body>
